fixed experience section mobile

--- a/styles/About.module.scss
+++ b/styles/About.module.scss
@@ -6,24 +6,20 @@
   grid-template-rows: auto auto;
   padding: 8rem 1rem;
 
-  .about_container {
-    margin-bottom: 1.5rem;
-    display: flex;
-    align-items: center;
-  }
-
   .about_info {
     grid-column: 1 / span 2;
     padding: 0 0.5rem;
+    width: 87vw;
   }
 
   .about_subject {
     line-height: 1.5rem;
-    max-width: 90%;
+    width: 80vw;
   }
 
   .about_subject:first-of-type {
     margin-bottom: 1.5rem;
+    width: 80vw;
   }
 
   .about_subject,
