--- a/styles/MainPageCard.module.scss
+++ b/styles/MainPageCard.module.scss
@@ -37,7 +37,7 @@
   }
 
   .main_card__subject {
-    // max-width: 1rem;
+    width: 80vw;
     line-height: 1.5rem;
 
     @media (min-width: 40rem) {
